--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".RegistrationActivity" />
         <activity android:name=".EventActivity" />
+        <activity android:name=".EventDetailsScreen" />
     </application>
 
 </manifest>
